--- a/src/docusaurus/src/css/custom.css
+++ b/src/docusaurus/src/css/custom.css
@@ -1,13 +1,13 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;/**
-
+@tailwind utilities;
+/**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
 
-/* You can override the default Infima variables here. */
+/* Override the default Infima variables here. */
 :root {
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
@@ -20,14 +20,14 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
+/* Choose a lighter palette in dark mode for readability. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #ff8842;
+  --ifm-color-primary-dark: #ff7422;
+  --ifm-color-primary-darker: #ff6a12;
+  --ifm-color-primary-darkest: #e15300;
+  --ifm-color-primary-light: #ff9c62;
+  --ifm-color-primary-lighter: #ffa672;
+  --ifm-color-primary-lightest: #ffc5a2;
+  --ifm-background-color: #333333;
 }
